# pet-mad

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  pyproject.toml  test.ipynb  test.py  tox.ini
.github/workflows/: build.yml  docs.yml  lint.yml  pr_docs_preview.yml  release.yml  tests-dev.yml  tests.yml
docs/: CHANGELOG.md  README_BATCHED.md  README_BUILD_LAMMPS.md  README_KOKKOS.md  README_OLD.md  UPET_MIGRATION_GUIDE.md
docs/src/: changelog.rst  citation.rst  conf.py  index.rst
docs/src/api/: calculator.rst  explore.rst  models.rst  utils.rst
docs/src/tutorials/: ase_interface.rst  batched_evaluation.rst  dataset_exploration.rst  dos_calculations.rst  lammps_interface.rst  uncertainty_quantification.rst
docs/src/user_guide/: installation.rst  quickstart.rst  usage_examples.rst
src/mad_explorer/: _explorer_train_script.py  explorer.py  mlp_projector.py  scaler.py
src/pet_mad/: __init__.py  _models.py  _version.py  calculator.py  modules.py  utils.py
src/pet_mad/explore/: __init__.py  _explorer.py  _featurizer.py  explorer_model.py  featurizer.py  mlp_projector.py
src/upet/: _version.py  calculator.py
tests/: __init__.py  test_basic_usage.py  test_inference_accuracy.py  test_metadata.py  test_non_conservative.py  test_uncertainty_quantification.py
tests/pet_mad/: test_basic_usage.py  test_md.py  test_metadata.py  test_non_conservative.py  test_pet_mad_basic_usage.py  test_pet_mad_metadata.py  test_rot_averaging.py  test_uncertainty_quantification.py
tests/pet_mad_dos/: test_basic_usage.py  test_metadata.py  test_pet_mad_dos_basic_usage.py  test_pet_mad_dos_metadata.py
tests/resources/: mad-bench-mad-reduced.xyz
tests/upet/: test_basic_usage.py  test_featurizer.py  test_md.py  test_metadata.py  test_non_conservative.py  test_rot_averaging.py  test_uncertainty_quantification.py
